Fix side spacing when logbook is selected.

--- a/src/components/dashboard-logbooks/dashboard-logbooks.module.scss
+++ b/src/components/dashboard-logbooks/dashboard-logbooks.module.scss
@@ -2,3 +2,12 @@
   display: flex;
   height: 100%;
 }
+
+.logbookSelectionSpacer {
+  flex-shrink: 0;
+  width: var(--fourHundredPixels);
+
+  &.hide {
+    display: none;
+  }
+}
