--- a/src/components/dashboard-logbooks/overview.module.scss
+++ b/src/components/dashboard-logbooks/overview.module.scss
@@ -5,4 +5,8 @@
   width: var(--fourHundredPixels);
   background-color: var(--themeOne);
   border-right: var(--themeFour) solid 1px;
+
+  &.hide {
+    display: none;
+  }
 }
